# minu

./: .gitignore  CMakeLists.txt  Makefile  README.md  test.c
example/esp32/: main.c  u8g2_port.c  u8g2_port.h
example/raylib/: CMakeLists.txt  main.cpp
inc/: minu.h  minu_anim.h  minu_anim_easing.h  minu_base.h  minu_conf.h  minu_disp.h  minu_item.h  minu_log.h  minu_monitor.h  minu_ops.h  minu_types.h  minu_viewer.h
port/: minu_port.h  minu_port_ops.h  minu_port_raylib.c  minu_port_tft_espi.c  minu_port_u8g2.c
src/: minu.c  minu_anim.c  minu_anim_easing.c  minu_base.c  minu_disp.c  minu_item.c  minu_monitor.c  minu_ops.c  minu_viewer.c
src/items/: minu_item_checkbox.c  minu_item_checkbox.h  minu_item_submenu.c  minu_item_submenu.h  minu_item_variable.c  minu_item_variable.h  minu_item_window.c  minu_item_window.h
test/vector/: Makefile  test_vector.c
utils/: minu_mem.c  minu_mem.h  minu_vector.c  minu_vector.h
